tests/istio/destinationrule-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: skydive-test-destinationrule-serviceentry
spec:
  hosts:
  - example.unix.local
  ports:
  - number: 80
    name: http
    protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: skydive-test-destinationrule-serviceentry
spec:
  host: example.unix.local
