tests/istio/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: skydive-test-gateway-virtualservice
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: skydive-test-gateway-virtualservice
spec:
  hosts:
  - reviews.prod.svc.cluster.local
  gateways:
  - skydive-test-gateway-virtualservice
  http:
  - route:
    - destination:
        host: reviews.prod.svc.cluster.local
        subset: v1
