tests/istio/virtualservice-pod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: skydive-test-virtualservice-pod
spec:
  hosts:
  - reviews.prod.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews.prod.svc.cluster.local
        subset: v1
---
apiVersion: v1
kind: Pod
metadata:
  name: skydive-test-virtualservice-pod
  labels:
    app: reviews.prod.svc.cluster.local
    version: v1
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: skydive-test-virtualservice-pod
spec:
  host: reviews.prod.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
