tests/istio/vs-dr-pod-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: skydive-test-vs-dr-pod-service
spec:
  hosts:
  - reviews.prod.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews.prod.svc.cluster.local
        subset: v1
---
apiVersion: v1
kind: Pod
metadata:
  name: skydive-test-vs-dr-pod-service
  labels:
    app: reviews.prod.svc.cluster.local
    version: v1
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: skydive-test-vs-dr-pod-service
  labels:
    app: reviews.prod.svc.cluster.local
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews.prod.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: skydive-test-vs-dr-pod-service
spec:
  host: reviews.prod.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
